# drforest

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  pixi.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  scorecard.yml
benchmarks/: real_datasets.py  report.py  results_io.py
benchmarks/data/: fetch_mtr.py
benchmarks/diagnostics/: diagnose_alpha.py
benchmarks/studies/: run_ablation.py  run_oracle_alpha.py  run_real_benchmark.py  run_shrinkage_frontier.py  run_synthetic_splitting.py
crates/drforest-core/: Cargo.toml
crates/drforest-core/src/: lib.rs
crates/drforest-py/: Cargo.toml
crates/drforest-py/src/: lib.rs
drforest/: __init__.py  forest.py  mixture.py  rng.py  shrinkage.py  tree.py  weights.py
drforest/criteria/: __init__.py  _rust.py  adaptive_mmd.py  anisotropic_mmd.py  base.py  cart.py  mmd_rff.py  sliced_wasserstein.py
drforest/datasets/: __init__.py  external.py  synthetic.py
drforest/features/: __init__.py  rff.py
drforest/metrics/: __init__.py  crps.py  rmse.py
drforest/targets/: __init__.py  _validation.py  cdf.py  mean.py  quantile.py
paper/: main.bib  main.fdb_latexmk  main.fls  main.tex
paper/tables/: modification_vs_mmd.tex  multivariate_vs_cart.tex  real_absolute.tex  real_vs_cart.tex  shrinkage_frontier.tex  synthetic_vs_cart.tex
tests/: test_benchmark_frontier.py  test_core.py  test_criteria.py  test_datasets.py  test_forest.py  test_mixture.py  test_readme.py  test_rff.py  test_rng.py  test_rust_parity.py  test_shrinkage.py  test_targets_metrics.py  test_tree.py
