[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "drforest"
description = "Distributional Random Forests with different split metrics, test statistics and a Rust backend"
authors = [{ name = "Silas Koemen", email = "research@silaskoemen.com" }]
version = "0.1.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.urls]
repository = "https://github.com/silaskoemen/drforest"

[project.scripts]

[tool.maturin]
manifest-path = "crates/drforest-py/Cargo.toml"
module-name = "drforest._drforest_core"
python-source = "."

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "N803", # https://docs.astral.sh/ruff/rules/invalid-argument-name
  "N806", # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
  "E501", # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = '3.11'
no_implicit_optional = true
check_untyped_defs = true

# If you run into `missing library stubs or py.typed marker` errors
# and no stubs are available for this library, you can add an override
# to ignore the missing imports.
# [[tool.mypy.overrides]]
# module = ["my_module"]
# ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: test requires network access (fetches a real dataset); skips if offline",
]
